# Halal-OS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  app.js  index.css  index.html  mkdocs.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: create-issues.ps1  create-issues.sh  create_issues.py  setup-labels.sh
.github/workflows/: ci-go.yml  ci-python.yml  ci-rust.yml  ci-web.yml  dependency-updates.yml  docs-deploy.yml  pull-shark.yml  release.yml  security-scan.yml
Project Plan/: Halal OS Brand Identity.html  Halal OS Detailed Project Plan.md  Halal OS GUI Design System.html  Halal OS GUI Improvement Plan.md  Halal OS Project Plan.md
ai/: voice_assistant.py
antigravity/: halal_conventions.json
app-store/: go.mod  main.go
browser/: Cargo.toml
browser/src/: main.rs
cloud/: docker-compose.yml  go.mod  main.go
desktop/hdk/: Cargo.toml  README.md
desktop/hdk/src/: button.rs  card.rs  icons.rs  input.rs  lib.rs  switch.rs
display-manager/: Cargo.toml
display-manager/src/: main.rs
docs/: contributing_guide.md
filesystems/: Cargo.toml
filesystems/src/: main.rs
infrastructure/: build_iso.sh  deployment.yaml  main.tf
islamic/: glossary.json  prayer_calc.py
kernel/: Makefile  lsm_halal.c
package-manager/: Cargo.toml
package-manager/src/: main.rs
security/: Cargo.toml  rules.yara
security/src/: main.rs
