[package]
name = "halal-browser-helper"
version = "2.0.0"
edition = "2021"
authors = ["Halal OS contributors"]
description = "Rust helper utility for the Chromium-based Halal Browser, configuring DoH, adblocking engine, and parental filtration logs."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.9"
sqlite = "0.37"
