[package]
name = "halalpkg"
version = "2.0.0"
edition = "2021"
authors = ["Halal OS contributors"]
description = "Rust-based atomic package installer verifying GPG metadata signatures and handling flatpak sandboxing hooks."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
sqlite = "0.30"
