[package]
name = "halal-security"
version = "2.0.0"
edition = "2021"
authors = ["Halal OS contributors"]
description = "Rust systems daemon for the Halal OS security suite: firewall, malware guard, flatpak box namespaces."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = "0.27"
yara = "0.18"
sqlite = "0.37"
